# jig

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  app.cc  app.h  buffer.cc  buffer.h  bufferview.cc  bufferview.h  build  clipboard.h  color.cc  color.h  default-fig  document.cc  document.h  documentlist.cc  documentlist.h  edit.cc  edit.h  edithistory.cc  edithistory.h  fig  fig.cc  fig.h  figmanager.cc  figmanager.h  file.cc  file.h  line.h  linenumbercolumn.cc  linenumbercolumn.h  logger.cc  logger.h  main.cc  path.cc  path.h  selectmodehandler.cc  (+19 more)
tools/: addCopyrightHeader
